# glInit

./: CMakeLists.txt  README.md  main.cpp
shaders/: FragmentShader.glsl  VertexShader.glsl  fs1.glsl  fs2.glsl
source/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  renderer.cpp  renderer.h
